Fix justified layout overflow

--- a/src/scss/templates/_archive.scss
+++ b/src/scss/templates/_archive.scss
@@ -70,23 +70,17 @@
 }
 
 .archive--masonary {
-  padding: 0;
+  padding: 0 $unit;
 
   .archive__items {
     position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-
-    /* Force new columns */
-    &::before,
-    &::after {
-      content: "";
-      flex-basis: 100%;
-      width: 0;
-      order: 2;
-    }
+    // display: flex;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
   }
 
   .archive__item {
