--- a/src/scss/templates/_project.scss
+++ b/src/scss/templates/_project.scss
@@ -219,6 +219,7 @@
   .project__images {
     grid-area: images;
     position: relative;
+    padding: 0 $unit;
   }
 
   .project__image {
